Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-18133

BSoD when stress testing ReactOS with NTCrash2 at 0xfd

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.15
    • NTCore
    • None

    Description

      ReactOS 0.4.15-x86-dev (Build 20220320-755631e), MSVC build.

      Stack trace is:

      (ntoskrnl\mm\mmfault.c:123) Page fault at high IRQL was 2, address 80
      In-page I/O error ffffffffc0000001 - code c0000006 (!!! second chance !!!)
      hal!KxAcquireSpinLock+0x11:
      802d87d1 3b01            cmp     eax,dword ptr [ecx]
       # ChildEBP RetAddr  
      00 f97b2c60 802d855c hal!KxAcquireSpinLock(unsigned long * SpinLock = 0x00000080)+0x11 [d:\a\reactos\reactos\src\ntoskrnl\include\internal\spinlock.h @ 31] 
      01 f97b2c74 80444121 hal!KeAcquireSpinLockRaiseToSynch(unsigned long * SpinLock = 0x00000080)+0x2c [d:\a\reactos\reactos\src\hal\halx86\generic\spinlock.c @ 44] 
      02 f97b2ce4 8040405e nt!NtSetTimer(void * TimerHandle = 0x0040b6e0, union _LARGE_INTEGER * DueTime = 0x0040b6e0 0x80000000, <function> * TimerApcRoutine = 0x0000003d, void * TimerContext = 0xffffffff, unsigned char WakeTimer = 0x3d '=', long Period = 0n2147483647, unsigned char * PreviousState = 0x00000000 "")+0x181 [d:\a\reactos\reactos\src\ntoskrnl\ex\timer.c @ 649] 
      03 f97b2d10 805561c8 nt!KiSystemCallTrampoline+0x19
      04 f97b2d5c 80403e0e nt!KiSystemServiceHandler(struct _KTRAP_FRAME * TrapFrame = 0xf97b2d64, void * Arguments = 0x0012fdc0)+0x278 [d:\a\reactos\reactos\src\ntoskrnl\ke\i386\traphdlr.c @ 1840] 
      05 f97b2d5c 004016d6 nt!KiInterruptTemplateDispatch+0x6a
      *** WARNING: Unable to verify checksum for ntcrash2.exe
      WARNING: Stack unwind information not available. Following frames may be wrong.
      06 0012ff74 0040186d ntcrash2+0x16d6
      07 0012ffc0 7c636b54 ntcrash2+0x186d
      08 0012fff0 00000000 kernel32!BaseProcessStartup(<function> * lpStartAddress = 0x00401fe6)+0x54 [d:\a\reactos\reactos\src\dll\win32\kernel32\client\proc.c @ 463] 
       

      Attachments

        Activity

          People

            ThFabba ThFabba
            ctasan ctasan
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: