[NTOS:EX] Only set WakeTimer-related status if timer handle is valid. CORE-18133

Since STATUS_TIMER_RESUME_IGNORED is a success status, we would
otherwise go into the success case with a NULL Timer object pointer.